Fri May 29 14:41:19 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_errno.h: added GSL_EBADLEN to signify bad lengths of
 	matrices or vectors (e.g. non-conformant sizes in a matrix or
 	vector multiplication)

Wed May 27 18:15:34 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* test.c (gsl_test_str): changed things so that the strings aren't
 	printed unless the string equality test fails (usually they were
 	too long)

Mon May 18 17:58:20 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* test.c (gsl_test_rel): added a test for numerical quantities,
 	given a result, an expected result and an allowable relative
 	error.
	(gsl_test_int): added a test for comparing integers

Sun May 10 16:03:12 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_errno.h: added GSL_EROUND for roundoff errors

Fri May  8 18:50:13 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_errno.h: changed GSL_ETIMEOUT to GSL_EMAXITER to describe
 	the error that occurs when a specified number of iterations is
 	exceeded.

Sun Apr 19 19:14:05 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* strerror.c (gsl_strerror): added an strerror function for making
 	readable descriptions of the error number

Wed Apr 15 21:59:57 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* added a stream handler, for the error stream

	* completely reorganized the files, but the functions are
 	relatively unchanged

Wed Apr  8 13:55:48 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_errno.h (GSL_ERROR_RETURN_NOTHING): added an error macro
 	suitable for void functions

Mon Apr  6 14:10:48 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_errno.h: use enum instead of #define for symbolic constants,
 	so that they can be seen in the debugger

Sun Apr  5 19:49:17 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* err/errno.c (gsl_error): now takes gsl_errno as an argument
 	(this is useful for doing conditional breakpoints)
